--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,19 @@
 
   <name>KTest</name>
   <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Java version -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        
+        <!-- JEE Platform -->        
+        <jee.version>8.0</jee.version>
+        <lombok.version>1.18.6</lombok.version>
+       
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
 
   <dependencies>
     <dependency>
