--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
 				<plugins>
 					<!-- To release to Maven central -->
 					<plugin>
-						<groupid>org.sonatype.plugins</groupid>
-						<artifactid>nexus-staging-maven-plugin</artifactid>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
 						<version>1.6.8</version>
 						<extensions>true</extensions>
 						<configuration>
@@ -83,10 +83,11 @@
 							<autoreleaseafterclose>true</autoreleaseafterclose>
 						</configuration>
 					</plugin>
+
 					<!-- To generate javadoc -->
 					<plugin>
-						<groupid>org.apache.maven.plugins</groupid>
-						<artifactid>maven-source-plugin</artifactid>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
 						<version>3.0.1</version>
 						<executions>
 							<execution>
@@ -98,8 +99,8 @@
 						</executions>
 					</plugin>
 					<plugin>
-						<groupid>org.apache.maven.plugins</groupid>
-						<artifactid>maven-javadoc-plugin</artifactid>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>2.10.4</version>
 						<executions>
 							<execution>
@@ -113,8 +114,8 @@
 
 					<!-- To sign the artifacts -->
 					<plugin>
-						<groupid>org.apache.maven.plugins</groupid>
-						<artifactid>maven-gpg-plugin</artifactid>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.6</version>
 						<executions>
 							<execution>
