--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
 
 ## Build and release to maven central  
 script: 
-    mvn clean deploy --settings .maven.xml -Dgpg.passphrase=bigyantest1 -DskipTests=true -B -U -Prelease 
+    mvn clean deploy --settings .maven.xml -DskipTests=true -B -U -Prelease 
