--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- Java version -->
-		<maven.compiler.source>1.8</maven.compiler.source>
-                <maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>11</maven.compiler.target>
 
 		<!-- JEE Platform -->
 		<jee.version>8.0</jee.version>
@@ -99,7 +99,7 @@
 							</execution>
 						</executions>
 					</plugin>
-					 <plugin>
+					 <!--<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>3.2.0</version>
@@ -111,7 +111,7 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>
+					</plugin>-->
 
 					<!-- To sign the artifacts -->
 					<plugin>
