--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- Java version -->
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<!--<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>-->
 
 		<!-- JEE Platform -->
 		<jee.version>8.0</jee.version>
@@ -71,6 +71,17 @@
 
 			<build>
 				<plugins>
+					
+					     <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+					
 					<!-- To release to Maven central -->
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
