--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 							</execution>
 						</executions>
 					</plugin>
-					<!--  <plugin>
+					  <plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>2.10.4</version>
@@ -121,7 +121,7 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>-->
+					</plugin>
 
 					<!-- To sign the artifacts -->
 					<plugin>
