--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@
 language: java
 
 ## export GPG details
-##before_install:
-##    - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
-##    - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
+before_install:
+    - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
+    - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
   
 install:
     mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
