--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@
 language: java
 
 ## export GPG details
-before_install:
-      - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_key -in all.gpg.enc -out all.gpg -d
-      - gpg --import all.gpg
+##before_install:
+##      - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_key -in all.gpg.enc -out all.gpg -d
+##      - gpg --import all.gpg
 ##    - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
 ##    - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
   
