--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ language: java
 before_install:
 ##      - openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_key -in all.gpg.enc -out all.gpg -d
 ##      - gpg --import all.gpg
-    - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
-    - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
+    ##- echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
+    ##- echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
+    echo privatekey.txt --import
+    echo Ownertrust.txt --import-ownertrust
   
 install:
     ##mvn --settings .maven.xml install -Dgpg.skip
